--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         </style>
     </head>
     <body>
-        <script src="build/project.bundle.js" charset="utf-8"></script>   
+        <script src="project.bundle.js" charset="utf-8"></script>   
     </body>
 </html>
