--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Covalent Bond</title>
-        <style>
-            html, body {
-                background-color: #000000;
-                margin: 0;
-                padding: 0;
-                height: 100%;
-                width: 100%;
-                overflow: hidden;
-                display: block;
-            }
-        </style>
-    </head>
-    <body>
-        <script src="project.bundle.js" charset="utf-8"></script>   
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+    <title>Covalent Bond</title>
+    <style>
+        html,
+        body {
+            background-color: #000000;
+            margin: 0;
+            margin-left: -20px;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+        }
+    </style>
+</head>
+
+<body>
+    <div id = 'Covalent_Bond' > </div>
+    <script src="project.bundle.js" charset="utf-8"></script>
+</body>
+
 </html>
